--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>groupId</groupId>
     <artifactId>ETL_Demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <configuration>
+        <archive>
+            <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>Main</mainClass>
+            </manifest>
+        </archive>
+    </configuration>
     <build>
         <plugins>
             <plugin>
